; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_shade_calc.c_RB_CalcTurbulentFactors.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_shade_calc.c_RB_CalcTurbulentFactors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { float }
%struct.TYPE_4__ = type { float, float, float }

@tess = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RB_CalcTurbulentFactors(%struct.TYPE_4__* %0, float* %1, float* %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store float* %1, float** %5, align 8
  store float* %2, float** %6, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load float, float* %8, align 4
  %10 = load float, float* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @tess, i32 0, i32 0), align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  %13 = load float, float* %12, align 4
  %14 = fmul float %10, %13
  %15 = fadd float %9, %14
  %16 = load float*, float** %6, align 8
  store float %15, float* %16, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 2
  %19 = load float, float* %18, align 4
  %20 = load float*, float** %5, align 8
  store float %19, float* %20, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
